Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62640

QWebEngineDownloadItem::type() is not working correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.5
    • 5.9
    • WebEngine
    • None

      Its value is "DownloadAttribute" when an explicit download is initiated by QWebEnginePage::load(). We should add a new enum value for this case.

      Furthermore, there are some strange things in the source code of this feature: https://codereview.qt-project.org/#/c/156951/

      • Testing an enum value in DownloadManagerQt:
      if (!isAttachment || !BrowserContextAdapterClient::UserRequested)
      
      • m_downloadType is a member of DownloadManagerDelegateQt: It could cause problems in parallel downloads.

      These need to be investigated.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            juri.valdmann Jüri Valdmann (Inactive)
            davidsz Szabolcs David
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes