Fix QWebEngineDownloadItem::type()

Task-number: QTBUG-62640
Change-Id: I2b16f24533b38c20a7071319723382ba240e35f3
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>