src/core/download_manager_delegate_qt.h
@@ -84,7 +84,7 @@ public:
 
     void cancelDownload(quint32 downloadId);
 
-    void setDownloadType(int downloadType) { m_downloadType = downloadType; }
+    void markNextDownloadAsUserRequested() { m_nextDownloadIsUserRequested = true; }
 
     // Inherited from content::DownloadItem::Observer
     void OnDownloadUpdated(content::DownloadItem *download) override;
@@ -97,7 +97,7 @@ private:
 
     uint64_t m_currentId;
     base::WeakPtrFactory<DownloadManagerDelegateQt> m_weakPtrFactory;
-    int m_downloadType;
+    bool m_nextDownloadIsUserRequested;
 
     friend class DownloadManagerDelegateInstance;
     DISALLOW_COPY_AND_ASSIGN(DownloadManagerDelegateQt);
